@startuml
legend
<u><b>Legend</b></u>
Render Aggregations: true
Render Fields: true
Render Methods: true
Pritave Aggregations: true
end legend
namespace Entity {
    interface ControlAlgorithm  {
        + SetGoal(goal float64) 
        + SetP(p float64) 
        + SetI(i float64) 
        + SetD(d float64) 
        + SetSampleTime(d float64) 
        + GetIntegralTerm() float64
        + Calculate(currentValue float64) float64

    }
    interface Encoder  {
        + Watchdog() 
        + ResetPosition() 
        + GetPosition() int16
        + TearDown() 

    }
    interface Engine  {
        + SetGas(gas GasLevel) 
        + StepResponse() 
        + SpeedUp() 
        + MakeLap() 
        + RpmControl(goal float64) 
        + StopRmpControl() 
        + PositionControl() 
        + Brake() 
        + UnBrake() 
        + Forward() 
        + Backward() 
        + GetPosition() int16
        + GetCurrentAngularSpeed() float64
        + TearDown() 
        + InitialState() 

    }
    class Entity.GasLevel << (T, #FF7700) >>  {
    }
    class controlAlgorithm << (S,Aquamarine) >> {
        - goal float64
        - integralTerm float64
        - sampleTime float64
        - currentValue float64
        - currentError float64
        - pastError float64

        + P float64
        + I float64
        + D float64

        + SetGoal(goal float64) 
        + SetP(p float64) 
        + SetI(i float64) 
        + SetD(d float64) 
        + GetIntegralTerm() float64
        + SetSampleTime(st float64) 
        + Calculate(currentValue float64) float64

    }
    class engine << (S,Aquamarine) >> {
        - encoderSlots int
        - resolution float64
        - controlAlgorithm ControlAlgorithm
        - brakePin Pin.OutPin
        - dirPin Pin.OutPin
        - pwmPin Pin.PWMPin
        - encoder Encoder
        - currentGas GasLevel
        - forward bool
        - isControlRunning <font color=blue>chan</font> bool
        - currentAngularSpeed float64

        - watchdog() 
        - contrlLoop(goal float64) 
        - reescalePid(pid float64) float64

        + InitialState() 
        + MakeLap() 
        + SpeedUp() 
        + SetGas(gas GasLevel) 
        + StepResponse() 
        + RpmControl(goal float64) 
        + StopRmpControl() 
        + PositionControl() 
        + Brake() 
        + UnBrake() 
        + Forward() 
        + Backward() 
        + GetPosition() int16
        + TearDown() 
        + GetCurrentAngularSpeed() float64

    }
}

"Entity.ControlAlgorithm" <|-- "implements""Entity.controlAlgorithm"
"Entity.Engine" <|-- "implements""Entity.engine"

"Entity.engine""uses" o-- "Entity.ControlAlgorithm"
"Entity.engine""uses" o-- "Entity.Encoder"
"Entity.engine""uses" o-- "Entity.GasLevel"
"Entity.engine""uses" o-- "Pin.OutPin"
"Entity.engine""uses" o-- "Pin.PWMPin"

namespace Pin {
    interface EncoderPin  {
        + Read() bool
        + TearDown() 
        + WaitForEdge() 

    }
    interface OutPin  {
        + Up() 
        + Down() 
        + TearDown() 

    }
    interface PWMPin  {
        + GetMaxDuty() Duty
        + GetMinDuty() Duty
        + GetMaxFrequency() Frequency
        + SetPWM(duty Duty, frequency Frequency) 
        + StopPWM() 
        + TearDown() 

    }
    class Pin.Duty << (T, #FF7700) >>  {
    }
    class Pin.Frequency << (T, #FF7700) >>  {
    }
}



"__builtin__.int32" #.. "alias of""Entity.GasLevel"
"__builtin__.int32" #.. "alias of""Pin.Duty"
"__builtin__.int64" #.. "alias of""Pin.Frequency"
@enduml
